@@ -45,7 +45,7 @@ class TestAddFields extends Base {
             f("test3", o(f("test", v(1)))),
             f("test4", o(f("test", o(f("test1", v(2)), f("test2", v(3)))))),
             f("test.test", v(0))),
-        result.get(0).value);
+        result.getFirst().value);
   }
 
   @Test
@@ -63,7 +63,7 @@ class TestAddFields extends Base {
             f("test1", v(0)),
             f("test3", o(f("test", v(0)))),
             f("test4", o(f("test", o(f("test2", v(3))))))),
-        result.get(0).value);
+        result.getFirst().value);
   }
 
   @Test
@@ -80,6 +80,6 @@ class TestAddFields extends Base {
             f(ID, v("0")),
             f("test1", v(0)),
             f("test3", o(f("test", v(0)), f("test1", o(f("test2", v(3))))))),
-        result.get(0).value);
+        result.getFirst().value);
   }
 }
