@@ -37,6 +37,6 @@ class TestDelay extends Base {
     future.join();
     assertEquals(0, result.size());
     assertEquals(1, sent.size());
-    assertEquals(message, sent.get(0));
+    assertEquals(message, sent.getFirst());
   }
 }
