@@ -6,14 +6,14 @@ import static net.pincette.json.Factory.a;
 import static net.pincette.json.Factory.f;
 import static net.pincette.json.Factory.o;
 import static net.pincette.json.Factory.v;
-import static net.pincette.rs.DequePublisher.dequePublisher;
+import static net.pincette.rs.QueuePublisher.queuePublisher;
 import static net.pincette.util.ScheduledCompletionStage.runAsyncAfter;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.ArrayList;
 import java.util.List;
 import javax.json.JsonObject;
-import net.pincette.rs.DequePublisher;
+import net.pincette.rs.QueuePublisher;
 import net.pincette.rs.streams.Message;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -24,10 +24,10 @@ class TestProbe extends Base {
   void probe() {
     final JsonObject message = o(f("test", v(0)));
     final List<String> names = new ArrayList<>();
-    final DequePublisher<Message<String, JsonObject>> publisher = dequePublisher();
+    final QueuePublisher<Message<String, JsonObject>> publisher = queuePublisher();
 
-    runAsyncAfter(() -> publisher.getDeque().addFirst(inputMessage(message)), ofSeconds(5));
-    runAsyncAfter(() -> publisher.getDeque().addFirst(inputMessage(message)), ofSeconds(65));
+    runAsyncAfter(() -> publisher.getQueue().add(inputMessage(message)), ofSeconds(5));
+    runAsyncAfter(() -> publisher.getQueue().add(inputMessage(message)), ofSeconds(65));
     runAsyncAfter(publisher::close, ofSeconds(66));
 
     final List<Message<String, JsonObject>> result =
@@ -44,6 +44,6 @@ class TestProbe extends Base {
     assertEquals(message, result.get(0).value);
     assertEquals(message, result.get(1).value);
     assertEquals(1, names.size());
-    assertEquals("test", names.get(0));
+    assertEquals("test", names.getFirst());
   }
 }
